// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Supermarket applies percentage discounts 1`] = `
Receipt {
  "discounts": Array [
    Discount {
      "description": "20% off",
      "discountAmount": 0.39799999999999996,
      "product": Product {
        "name": "apples",
        "unit": 0,
      },
    },
  ],
  "items": Array [
    ReceiptItem {
      "price": 1.99,
      "product": Product {
        "name": "apples",
        "unit": 0,
      },
      "quantity": 1,
      "totalPrice": 1.99,
    },
  ],
}
`;

exports[`Supermarket applies ten percent discout 1`] = `
Receipt {
  "discounts": Array [
    Discount {
      "description": "10% off",
      "discountAmount": 0.24900000000000003,
      "product": Product {
        "name": "rice",
        "unit": 1,
      },
    },
  ],
  "items": Array [
    ReceiptItem {
      "price": 2.49,
      "product": Product {
        "name": "rice",
        "unit": 1,
      },
      "quantity": 1,
      "totalPrice": 2.49,
    },
  ],
}
`;

exports[`Supermarket three for two discount 1`] = `
Receipt {
  "discounts": Array [
    Discount {
      "description": "3 for 2",
      "discountAmount": 0.9899999999999998,
      "product": Product {
        "name": "toothbrush",
        "unit": 1,
      },
    },
  ],
  "items": Array [
    ReceiptItem {
      "price": 0.99,
      "product": Product {
        "name": "toothbrush",
        "unit": 1,
      },
      "quantity": 3,
      "totalPrice": 2.9699999999999998,
    },
  ],
}
`;
